--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,107 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+ *{
+    font-family: "Roboto", sans-serif;
+ }
+
+ body {
+    background-color: rgb(243, 240, 240);
+ }
+
+ ul {
+   list-style-type: none;
+ }
+
+
+ nav {
+   width: auto;
+ }
+
+ #error_explanation{
+   background-color: rgba(240, 110, 93, 0.205);
+   color: rgb(172, 5, 5);
+   border: solid 1px rgb(172, 5, 5);
+   padding: 1em;
+   max-width: 400px;
+   border-radius: 10px;
+   margin-bottom: 3em;
+   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+ }
+
+ 
+
+ .login-btn {
+   border: none;
+   background-color: lightgreen;
+   padding: 5px;
+   border-radius: 5px;
+   font-size: medium;
+   margin-left: auto;
+   display: block;
+ }
+
+ .form {
+   background-color: ghostwhite;
+   max-width: 400px;
+   margin-left: auto;
+   margin-right: auto;
+   padding: 1em;
+
+   margin-top: 2em;
+ }
+
+ .form-container {
+   width: fit-content;
+   margin-left: auto;
+   margin-right: auto;
+ }
+
+ .field {
+   padding-top: 1em;
+ }
+
+ .card-links{
+   margin-top: 1em;
+ }
+
+ .card-btn{
+   margin-right: 1em;
+ }
+
+ .card {
+   background-color: ghostwhite;
+   max-width: 400px;
+   padding: 1em;
+   margin-top: 1em;
+   border: solid 1px black;
+   border-radius: 5px;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.nvm-btn {
+   padding-top: 1em;
+   display: block;
+}
+
+.add-pizza-btn {
+   background-color: lightblue;
+   padding: .5em;
+   text-decoration: none;
+   color: black;
+   border-radius: 5px;
+   margin-left: auto;
+   margin-right: auto;
+   display: block;
+   width: fit-content;
+}
+
+.index-title {
+   margin-left: auto;
+   margin-right: auto;
+   display: block;
+   width: fit-content;
+}
