--- a/app/views/pizzas/_form.html.erb
+++ b/app/views/pizzas/_form.html.erb
@@ -1,30 +1,24 @@
-<%= form_with model: pizza do |form| %>
+<% if @pizza.errors.any? %>
+    <%= render "errors"%>
+  <% end %>
 
-    <div>
-        <%= form.label :name%>
+<div class="form">
+  <%= form_with model: pizza do |form| %>
+
+    <div class="field">
+        <h4><%= form.label :name%></h4>
         <%= form.text_field :name%>
     </div>
-    <h3><%= form.label "Toppings"%></h3>
-    
-    <% Topping.all.each do |topping| %>
-        <div>
-            <%= form.label "#{topping.name}"%>
-            <%= check_box_tag('toppings[]', topping.id, pizza.topping_ids.include?(topping.id))%>
-        </div>
-    <% end %>
 
-    <div>
+    <div class="field">
+      <h4><%= form.label "Toppings"%></h4>
+      <%= form.collection_check_boxes :topping_ids, Topping.all, :id, :name %>
+    </div>
+    
+
+    <div class="field">
         <%= form.submit%>
     </div>
-    <% if @pizza.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pizza.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-      <% @pizza.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+    <%= link_to "Nevermind", pizzas_path, class: "nvm-btn"%>
   <% end %>
-<% end %>
+</div>
