--- a/app/views/pizzas/index.html.erb
+++ b/app/views/pizzas/index.html.erb
@@ -1,15 +1,16 @@
-<ul>
+<h2 class="index-title">Welcome Back Chef!</h2>
+
+
+    <%= turbo_frame_tag "new_pizza" do %>
+        <%= link_to "Add a Pizza?", new_pizza_path, class: "add-pizza-btn" %>
+    <% end%>  
+
     <% @pizzas.each do |pizza| %>
         <%= turbo_frame_tag pizza do %>
             <%= render pizza %>
-            
         <% end %>
-        
     <% end %>
 
-    <%= turbo_frame_tag "new_pizza" do %>
-        <%= link_to "Add a Pizza?", new_pizza_path %>
-    <% end%>    
+      
 
     <%= turbo_page_requires_reload %>
-</ul>
