--- a/app/views/toppings/_form.html.erb
+++ b/app/views/toppings/_form.html.erb
@@ -1,23 +1,18 @@
-<%= form_with model: topping do |form| %>
+<% if @topping.errors.any? %>
+    <%= render "errors"%>
+<% end %>
 
-    <div>
-        <%= form.label :name%>
+<div class="form">
+    <%= form_with model: topping do |form| %>
+
+    <div class="field">
+        <h4><%= form.label :name%></h4>
         <%= form.text_field :name%>
     </div>
-    <h3><%= form.label "Toppings"%></h3>
-
-    <div>
+    <div class="field">
         <%= form.submit%>
     </div>
-    <% if @topping.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@topping.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-      <% @topping.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <%= link_to "Nevermind", toppings_path, class: "nvm-btn"%>
+    
 <% end %>
+</div>
